[package]
name = "bevy-wasm-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_asset",
    "png",
    "webgl2",
] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
